...
    <fragment
        android:id="@+id/navigation_editEvents"
        android:name="com.example.lotterize.ui.addEvents.EditEventFragment"
        tools:layout="@layout/fragment_edit_event">
        <action
            android:id="@+id/action_edit_to_entrants"
            app:destination="@id/navigation_entrantsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_entrantsFragment"
        android:name="com.example.lotterize.ui.addEvents.AllEntrantsFragment"
        tools:layout="@layout/fragment_all_entrants">
...
